GC：引用计数法的实例